koreksi menambahkan lorem

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ullam corporis voluptates exercitationem
+        assumenda sed alias doloribus in. Magni magnam dolor animi amet ipsam, sapiente assumenda placeat incidunt nulla
+        suscipit.</p>
 </body>
 
 </html>
